# PrehireProject

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rate_limit_test.py  setup.cfg
.github/workflows/: pep8-check.yml  run-tests.yml  test.yml
_file_sharing_app/: db.sqlite3  manage.py
_file_sharing_app/_file_sharing_app/: asgi.py  settings.py  swagger_config.py  urls.py  wsgi.py
_file_sharing_app/authapp/: serializers.py  tests.py  urls.py  views.py
_file_sharing_app/files/: config.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utilities.py  views.py
_file_sharing_app/teams/: models.py  serializers.py  tests.py  urls.py  views.py
